# as-witx

./: Cargo.toml  common.as  math.as  math.ts  tuple.ts
src/: generator.rs  lib.rs  main.rs  pretty_writer.rs
tests/: integration_tests.rs
tests/input/: tuple.witx
tests/output/: tuple.ts
