[package]
name = "as-witx"
version = "0.1.0"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "as_witx_lib"

[dev-dependencies]
rayon = "1.0"
dissimilar = "1.0"
similar = "1.3"

[dependencies]
anyhow = "1.0"
clap = { version = "2.33", features = ["wrap_help"] }
heck = "0.3"
witx = "0.9"
